# gmenu2x-gcw0

./: configure.in
data/platform/a320/: about.txt
data/platform/dingux/sections/settings/: 10_poweroff  20_reboot  30_suspend  40_alsamixer  50_system_info  60_tv_out  suspend
data/platform/gcw0/sections/settings/: 20_reboot
data/platform/gcw0/skins/OD/: skin.conf
data/platform/nanonote/: about.txt
data/translations/: Basque  Catalan  Danish  Dutch  Finnish  French  German  Italian  Norwegian  Portuguese (Portugal)  Russian  Slovak  Spanish  Swedish  Turkish
src/: Makefile.am  asfont.cpp  asfont.h  background.cpp  background.h  battery.cpp  battery.h  browsedialog.cpp  button.cpp  button.h  buttonbox.cpp  buttonbox.h  clock.cpp  clock.h  contextmenu.cpp  contextmenu.h  debug.h  delegate.h  dialog.cpp  filedialog.h  filelister.cpp  font.cpp  font.h  gmenu2x.cpp  gmenu2x.h  helppopup.cpp  helppopup.h  iconbutton.cpp  iconbutton.h  imagedialog.cpp  imageio.cpp  inputdialog.cpp  inputmanager.cpp  inputmanager.h  layer.h  link.cpp  link.h  linkapp.cpp  linkapp.h  mediamonitor.cpp  (+34 more)
